fixed blurry images

--- a/src/app.scss
+++ b/src/app.scss
@@ -64,6 +64,11 @@ html {
   // -webkit-filter: blur(2px);
 }
 
+.listStyle{
+  color: white;
+}
+
+
 
 // .nav li {
 //   color: white;
